fixed gaps and paddings for 480p css

--- a/assets/stylesheets/media_query_stylesheets/media-styles-max-480.css
+++ b/assets/stylesheets/media_query_stylesheets/media-styles-max-480.css
@@ -9,8 +9,8 @@
 
 /* for main content */
 #content {
-    margin-top: 56px !important;
-    margin-bottom: 55px !important;
+    margin-top: 58px !important;
+    margin-bottom: 53px !important;
 }
 #content>.container {
     max-width: 100%;
@@ -47,7 +47,7 @@
 #special-primary-nav {
     display: block;
     border-top: 1px solid rgb(243,242,239);
-    padding: .4rem .2rem;
+    padding: .4rem .4rem;
     box-shadow: 0 -1px 0 rgba(0,0,0,0.08);
 }
 .special-nav-item .nav-icon {
@@ -56,7 +56,7 @@
     width: 2.8rem;
 }
 .nav-icon i {
-    font-size: 2.0rem; 
+    font-size: 2.2rem; 
 }
 
 /* for active navs in primary nav */
@@ -81,13 +81,13 @@
 
 /* column 1 */
 #profile-image-480 {
-    width: 3.2rem;
-    height: 3.2rem;
+    width: 3.4rem;
+    height: 3.4rem;
 }
 /* column 2 */
 #search-bar-480 input {
     background-color: rgb(238,243,248);
-    height: 32px;
+    height: 34px;
     line-height: 1.75;
     padding: .4rem 2.4rem .4rem 32px;
 }
